Fix #6: Path traversal vulnerability in Obsidian client
- Add _validate_note_path() helper with comprehensive validation
- Block absolute paths (/, \)
- Block path traversal attempts (..)
- Verify resolved paths stay within vault
- Only allow .md file extensions
- Add query length limit (1000 chars) to prevent DoS
- Validate folder parameters in list/search
- Prevent symlink escapes outside vault
- Add comprehensive security tests (20 tests, all passing)

Security impact:
- Prevents reading arbitrary files (/etc/passwd, .env, etc.)
- Blocks directory traversal attacks
- Protects database and config files

--- a/.ai-assisted/rules/registry.yaml
+++ b/.ai-assisted/rules/registry.yaml
@@ -35,3 +35,9 @@ rules:
     appliesToTools: ["claude"]
     tags: ["tooling"]
 
+  - path: rules/tools/security-testing-agent.md
+    id: rules.agent.security-testing
+    version: 1.0.0
+    appliesToTools: ["security-scanner"]
+    tags: ["security", "cve", "testing"]
+
