--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 node_modules/
 dist/
 package-lock.json
+
+# MCP todo list
+.mcp-todos.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
+.env
