--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:report": "playwright show-report"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -39,18 +43,12 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.477.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
     "ag-grid-react": "^32.1.0",
     "antd": "^5.20.5",
     "aos": "^2.3.4",
     "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "d3": "^7.9.0",
     "d3-sankey": "^0.12.3",
@@ -60,20 +58,23 @@
     "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "^8.5.2",
     "emoji-picker-react": "^4.11.1",
-    "esbuild": "^0.23.0",
+    "esbuild": "^0.25.10",
     "esbuild-plugin-globals": "^0.2.0",
     "ethers": "^6.13.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.24",
     "highcharts": "^11.4.7",
     "highcharts-react-official": "^3.2.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.3",
+    "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.477.0",
     "mapbox-gl": "^1.13.3",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "plotly": "^1.0.6",
+    "react": "^19.0.0",
     "react-big-calendar": "latest",
     "react-chartjs-2": "latest",
     "react-circular-progressbar": "latest",
@@ -82,10 +83,11 @@
     "react-day-picker": "latest",
     "react-dnd": "latest",
     "react-dnd-html5-backend": "latest",
+    "react-dom": "^19.0.0",
     "react-dropzone": "latest",
     "react-feather": "latest",
     "react-flow": "latest",
-    "react-force-graph": "latest",
+    "react-force-graph": "^1.29.3",
     "react-hook-form": "latest",
     "react-hot-toast": "latest",
     "react-intersection-observer": "latest",
@@ -97,12 +99,14 @@
     "react-plotly.js": "latest",
     "react-resizable-panels": "latest",
     "react-router-dom": "latest",
-    "react-syntax-highlighter": "latest",
+    "react-syntax-highlighter": "^5.8.0",
     "react-type-animation": "latest",
     "reactflow": "latest",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.13",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "tsparticles": "^3.5.0",
     "vaul": "^1.1.2",
@@ -112,6 +116,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "^1.56.0",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
