--- a/package.json
+++ b/package.json
@@ -78,33 +78,33 @@
     "papaparse": "^5.4.1",
     "plotly": "^1.0.6",
     "react": "^19.0.0",
-    "react-big-calendar": "latest",
-    "react-chartjs-2": "latest",
-    "react-circular-progressbar": "latest",
-    "react-colorful": "latest",
-    "react-confetti": "latest",
-    "react-day-picker": "latest",
-    "react-dnd": "latest",
-    "react-dnd-html5-backend": "latest",
+    "react-big-calendar": "^1.15.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-colorful": "^5.6.1",
+    "react-confetti": "^6.1.0",
+    "react-day-picker": "^9.4.5",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "react-dropzone": "latest",
-    "react-feather": "latest",
-    "react-flow": "latest",
+    "react-dropzone": "^14.3.5",
+    "react-feather": "^2.0.10",
+    "react-flow": "^11.11.4",
     "react-force-graph": "^1.29.3",
-    "react-hook-form": "latest",
-    "react-hot-toast": "latest",
-    "react-intersection-observer": "latest",
-    "react-konva": "latest",
-    "react-leaflet": "latest",
-    "react-markdown": "latest",
-    "react-masonry-css": "latest",
-    "react-pdf": "latest",
-    "react-plotly.js": "latest",
-    "react-resizable-panels": "latest",
-    "react-router-dom": "latest",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.15.0",
+    "react-konva": "^18.2.10",
+    "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.3",
+    "react-masonry-css": "^1.0.16",
+    "react-pdf": "^10.0.3",
+    "react-plotly.js": "^2.6.0",
+    "react-resizable-panels": "^2.2.0",
+    "react-router-dom": "^7.1.3",
     "react-syntax-highlighter": "^15.6.6",
-    "react-type-animation": "latest",
-    "reactflow": "latest",
+    "react-type-animation": "^3.2.0",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.13",
